# CUBIC-Config

./: .env  .env.default  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  start-server
.github/workflows/: rust.yml
migrations/2019-07-14-000913_create_initial_tables/: down.sql  up.sql
migrations/2019-10-20-014750_add_project_owner/: down.sql  up.sql
src/: api_user_auth.rs  database.rs  main.rs  models.rs  property_type.rs  rest_api.rs  schema.rs
static/: index.html  project.html
templates/: Index_ProjectsList.html  index.html  project.html  test_login.html
