[package]
name = "cubic_config"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
actix-files = "0.1.4"
json = "0.11.14"
futures = "0.1.28"
tokio = "0.1.22"

log = "0.4.8"
env_logger = "0.6.2"

diesel = { version = "1.4.2", default-features = false, features = ["mysql"]}
dotenv = "0.14.1"

serde = { version = "1.0.98", features = ["derive"] }
serde_derive = "1"

uuid = {version = "0.7.4", default-features = false, features = ["v4"]}

jsonwebtoken = "6"

askama = "0.8.0"
