[package]
name = "cubic_config"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "2.2.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
json = "0.11.14"
tokio = { version = "1.10.0", features = ["full"] }

log = "0.4.8"
env_logger = "0.6.2"

diesel = { version = "1.4.2", default-features = false, features = ["mysql"]}
dotenv = "0.15.0"

serde = { version = "1.0.98", features = ["derive"] }

uuid = {version = "0.7.4", default-features = false, features = ["v4"]}

jsonwebtoken = "6"

askama = "0.10.5"
