[package]
name = "cubic_config"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "2.3.0"
actix-web = "4.0.0-beta.10"
actix-files = "0.6.0-beta.8"
json = "0.12.4"
tokio = { version = "1.12.0", features = ["full"] }

log = "0.4.14"
env_logger = "0.9.0"

diesel = { version = "1.4.8", default-features = false, features = ["mysql"]}
dotenv = "0.15.0"

serde = { version = "1.0.130", features = ["derive"] }

uuid = {version = "1.1.2", default-features = false, features = ["v4"]}

jsonwebtoken = "7.2.0"

askama = "0.10.5"
